--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
 		  
 		  <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/hospital.PNG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/online-house.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/hospital.PNG" data-gall="portfolioGallery" class="venobox"
+                <a href="assets/img/portfolio/online-house.png" data-gall="portfolioGallery" class="venobox"
                   title="Web 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
