new images of hospital management system project
images

--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -93,13 +93,13 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/testimonials/h3.PNG" class="img-fluid" alt="">
-            <img src="assets/img/testimonials/h2.PNG" class="img-fluid" alt="">
-            <img src="assets/img/testimonials/h6.PNG" class="img-fluid" alt="">
-			<img src="assets/img/testimonials/h1.PNG" class="img-fluid" alt="">
-			<img src="assets/img/testimonials/h4.PNG" class="img-fluid" alt="">
-			<img src="assets/img/testimonials/h5.PNG" class="img-fluid" alt="">
-			<img src="assets/img/testimonials/h7.PNG" class="img-fluid" alt="">
+            <img src="assets/img/testimonials/house1.png" class="img-fluid" alt="">
+            <img src="assets/img/testimonials/house2.png" class="img-fluid" alt="">
+            <img src="assets/img/testimonials/house3.png" class="img-fluid" alt="">
+			<img src="assets/img/testimonials/house4.png" class="img-fluid" alt="">
+			<img src="assets/img/testimonials/house5.png" class="img-fluid" alt="">
+			<img src="assets/img/testimonials/house6.png" class="img-fluid" alt="">
+			<img src="assets/img/testimonials/house7.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
