--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -53,6 +53,7 @@
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/piyushwani004/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/piyushwani004" class="github"><i class="fab fa-github"></i></a>
         </div>
       </div>
 
