--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -54,6 +54,7 @@
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/piyushwani004/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/piyushwani004" class="github"><i class="fab fa-github"></i></a>
+          <a href="https://www.hackerrank.com/piyushwani04" class="HackerRank"><i class="fab fa-hackerrank"></i></a>
         </div>
       </div>
 
