Email and Mobile

--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
               </div>
 
               <div class="email">
-                <i class="icofont-envelope"></i>
+                <i href="mailto:piyushwani04@gmail.com" class="icofont-envelope"></i>
                 <h4>Email:</h4>
                 <p>piyushwani04@gmail.com</p>
               </div>
 
               <div class="phone">
-                <i class="icofont-phone"></i>
+                <i href="tel:8446785909" class="icofont-phone"></i>
                 <h4>Call:</h4>
                 <p>+91 8446785909</p>
               </div>
