--- a/index.html
+++ b/index.html
@@ -286,7 +286,15 @@
               </div>
             </div>
           </div>
-
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/calci.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/calci.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Web 2"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/SmartMallPro.jpg" class="img-fluid" alt="">
