call and email setting change

--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
               </div>
 
               <div class="email">
-                <i href="mailto:piyushwani04@gmail.com" class="icofont-envelope"></i>
+               <a href="mailto:piyushwani04@gmail.com"><i class="icofont-envelope"></i></a>
                 <h4>Email:</h4>
                 <p>piyushwani04@gmail.com</p>
               </div>
 
               <div class="phone">
-                <i href="tel:8446785909" class="icofont-phone"></i>
+                <a href="tel:8446785909"><i class="icofont-phone"></i></a>
                 <h4>Call:</h4>
                 <p>+91 8446785909</p>
               </div>
