--- a/index.html
+++ b/index.html
@@ -359,7 +359,19 @@
               </div>
             </div>
           </div>
-
+		
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/imgToText.PNG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/imgToText.PNG" data-gall="portfolioGallery" class="venobox"
+                  title="Web 2"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+		
+		
+		
         </div>
 
       </div>
