--- a/index.html
+++ b/index.html
@@ -267,16 +267,18 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Dssktop-Application</li>
+              <li data-filter=".filter-DeskApp">Dssktop-Application</li>
               <li data-filter=".filter-web">Web-Application</li>
+	      <li data-filter=".filter-app">Android App</li>	
               <li data-filter=".filter-card">Extra Activity</li>
+                  
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-DeskApp">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/JavaFirstPro.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -286,7 +288,7 @@
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-DeskApp">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/calci.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -295,7 +297,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-DeskApp">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/SmartMallPro.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -360,7 +362,7 @@
             </div>
           </div>
 		
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-DeskApp">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/imgToText.png" class="img-fluid" alt="">
               <div class="portfolio-links">
