--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+	  
     <div class="hero-container" data-aos="fade-in">
       <h1>Piyush Wani</h1>
-      <p>I'm <span class="typed" data-typed-items="Java Developer, Front-End Developer, Back-End Developer,"></span></p>
+      <p>I'm <span class="typed" data-typed-items=" Java Developer, Front-End Developer, Back-End Developer, Android Developer... "></span></p>
     </div>
+	  
   </section>
   <!-- End Hero -->
 
@@ -101,7 +103,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 04 Nov 1999</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8446785909</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Pune,Maharastra</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Pune,Maharastra</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -115,7 +117,7 @@
             </div>
             <p>
               Love to work with lower level stuff.Results-Oriented JAVA Program Developing and Testing. Great Grasp over
-              data Structures and Algorithm.Enjoy doing all kind of stuff on Computer.
+               data Structures and Algorithm.Enjoy doing all kind of stuff on Computer.
             </p>
           </div>
         </div>
@@ -160,7 +162,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">J2EE <i class="val">80%</i></span>
+              <span class="skill">J2EE <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -172,7 +174,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">80%</i></span>
+              <span class="skill">HTML <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -188,13 +190,21 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">80%</i></span>
+              <span class="skill">MySQL <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Android <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+		  
           </div>
 
         </div>
